# heimdall

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.linux  HANDOFF.md  LICENSE  Makefile  NOTICE  PROJECT_SPECIFICATION.md  README.md  agent.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docker/: arm64-build.Dockerfile  rust-tauri.Dockerfile
docs/: ARCHITECTURE.md  BUILDING.md  TESTING.md
scripts/: bundle-macos-dylibs.sh  sync-version.sh
src/: main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: app.rs  georef.rs  mod.rs  raster.rs  stac.rs  vector.rs
src-tauri/src/gdal/: dataset_cache.rs  mod.rs  tile_extractor.rs
src/lib/: annotation-tool.js  annotation-tool.ts  config-manager.ts  export-tool.js  export-tool.ts  file-constants.ts  geo-utils.js  geo-utils.ts  georeference-panel.ts  georeference-tool.ts  georeference-types.ts  inspect-tool.js  inspect-tool.ts  layer-manager.js  location-search.ts  logger.js  logger.ts  lru-cache.js  lru-cache.ts  map-manager.js  map-manager.ts  measure-tool.js  measure-tool.ts  notifications.js  notifications.ts  profile-tool.js  profile-tool.ts  project-manager.js  project-manager.ts  split-view.ts  stac-browser.js  stac-browser.ts  ui.js  ui.ts  zoom-rect-tool.js  zoom-rect-tool.ts
src/lib/__tests__/: annotation-tool.test.js  config-manager.test.ts  export-tool.test.js  fixtures.js  fixtures.test.js  fixtures.test.ts  fixtures.ts  geo-utils.test.js  geo-utils.test.ts  georeference-types.test.ts  inspect-tool.test.js  inspect-tool.test.ts  layer-manager.test.js  layer-manager.test.ts  logger.test.js  lru-cache.test.js  map-manager.test.js  map-manager.test.ts  measure-tool.test.js  measure-tool.test.ts  notifications.test.js  notifications.test.ts  pixel-grid.test.js  pixel-grid.test.ts  profile-tool.test.js  project-manager.test.js  project-manager.test.ts  stac-browser.test.js  stac-browser.test.ts  ui.test.js  zoom-rect-tool.test.js  zoom-rect-tool.test.ts
src/lib/layer-manager/: composition-handler.ts  histogram.ts  index.ts  layer-ui.ts  raster-handler.ts  tile-protocol.ts  types.ts  vector-handler.ts
src/styles/: main.css
src/types/: config.ts  index.ts  layers.d.ts  tauri.d.ts
