[package]
name = "heimdall"
version = "0.5.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
lru = "0.12"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2"
base64 = "0.22"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
rayon = "1.10"
dirs = "6"

# GDAL: use bindgen on non-Windows (supports newer GDAL like 3.12),
# but use pre-built bindings on Windows (avoids i32/u32 type mismatches)
[target.'cfg(not(target_os = "windows"))'.dependencies]
gdal = { version = "0.19", features = ["bindgen"] }

[target.'cfg(target_os = "windows")'.dependencies]
gdal = "0.19"

[profile.release]
# Use "debuginfo" instead of true to keep symbols needed by Tauri bundler
strip = "debuginfo"
lto = true
codegen-units = 1
